# Instrument-Classification

./: .gitignore  README.md
Apps/MusicCreator/: MusicCreator.sln  readme.md
Apps/MusicCreator/AudioLibrary/: AudioLibrary.csproj  Common.cs  DatasetGenerator.cs  FourierTransform.cs  WavFile.cs  packages.config
Apps/MusicCreator/AudioLibrary/Properties/: AssemblyInfo.cs
Apps/MusicCreator/MusicCreatorConsole/: MusicCreatorConsole.csproj  Program.cs  packages.config
Apps/MusicCreator/SoundAnalyzer/: Form1.Designer.cs  Form1.cs  Outdated.cs  Program.cs  SoundAnalyzer.csproj  packages.config
Apps/PyFourrier/: main.py  spectrogramme.py  wavio.py
Project/App/: README.md
Project/App/Interface_PA/: README.md  package-lock.json  package.json
Project/App/interfacev2/: ExecModel.php  ListModel.php  ModelUp.php  index.php  script.py  upload_model.php  upload_photo.php
Project/Docs/Rapport/: ESGI_ProjetAnnuel3BigData_G1_Rapport.docx  PA_2020.docx
Project/Lib/PythonML/: linear.py  multicouche.py  rbf.py  svm.py
Project/Lib/Rosenblatt/: Cargo.toml
Project/Lib/Rosenblatt/src/: classification.rs  lib.rs  main.rs  stats.rs
Project/Lib/SupervisingML/: Cargo.toml
Project/Tests/: Notebook _ CAS DE TESTS.ipynb  Notebook_Dataset.ipynb  linear.py
Project/Tests/.ipynb_checkpoints/: Notebook _ CAS DE TESTS-checkpoint.ipynb  Notebook_Dataset-checkpoint.ipynb
Project/Tests/Cas_Test/: TestCase.py  test_2.py  test_3.py  test_4.py  test_5.py
Project/Tests/Dataset_Tensorflow/: DatasetCreator.py
Project/Tests/Tensorflow/: DatasetCreator.py
(+9081 files in other folders)
