[package]
name = "Rosenblatt"
version = "0.1.0"
authors = ["Quentin <quentin.clodion@gmail.com>"]
edition = "2018"
[[bin]]
name = "classification"
path = "src/classification.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rosenblatt"
path = "src/classification.rs"

[dependencies]
rand = "0.7.3"