[package]
name = "Rosenblatt"
version = "0.1.0"
authors = ["Quentin <quentin.clodion@gmail.com>", "Marvin <>", "Ahmed <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rosenblatt"
path = "src/classification.rs"

[dependencies]
rand = "0.7.3"
ndarray = "0.13.0"