[package]
name = "Rosenblatt"
version = "0.1.0"
authors = ["Quentin <quentin.clodion@gmail.com>", "Marvin <>", "Ahmed <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rosenblatt"
path = "src/main.rs"

[lib]
name = "mllib_rust"
crate-type = ["cdylib"]

[dependencies]
rand = "0.7.3"
nalgebra = "0.21.0"
gnuplot = "0.0.34"